testsuite/tests/rename/should_fail/rnfail048.stderr

rnfail048.hs:11:12: error: [GHC-43895]
    Conflicting pragmas for 'foo'
    at rnfail048.hs:6:17-19
       rnfail048.hs:7:18-20
       rnfail048.hs:8:14-16
       rnfail048.hs:9:15-17
       rnfail048.hs:10:16-18
       rnfail048.hs:11:12-14
   |
 6 | {-# NOINLINE[1] foo #-}
   |                 ^^^
   |
 7 | {-# NOINLINE[~2] foo #-}
   |                  ^^^
   |
 8 | {-# NOINLINE foo #-}
   |              ^^^
   |
 9 | {-# INLINE[1] foo #-}
   |               ^^^
   |
10 | {-# INLINE[~2] foo #-}
   |                ^^^
   |
11 | {-# INLINE foo #-}
   |            ^^^
